# SecureSideEffectSearch

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  demo.sh  docker-compose.yml  run_container.sh
demo/client/: CMakeLists.txt  main.cpp
demo/server/: CMakeLists.txt  main.cpp
demo/share/: define.hpp
dmydata/: data.csv
doc/: Doxyfile
scripts/: deploy.sh  initialize.sh  prepare.sh
settings/: contextsetting.txt
src/: Makefile  Untitled.ipynb  Untitled1.ipynb  client.cpp  client_datacollect.cpp  client_datacollect2_fixedinput.cpp  client_datacollect2_generatedinput.cpp  constants.h  data_enc.cpp  filepath_info.h  findm.cpp  keygen.cpp  picojson_wrapper.h  server.cpp  server_nothreading.cpp  update.cpp
sses/: CMakeLists.txt
sses/sses_client/: CMakeLists.txt  sses_client.cpp  sses_client.hpp  sses_client_record.hpp  sses_client_result_cbfunc.hpp  sses_client_result_thread.cpp  sses_client_result_thread.hpp
sses/sses_server/: CMakeLists.txt  sses_server.cpp  sses_server.hpp  sses_server_calcmanager.cpp  sses_server_calcmanager.hpp  sses_server_calcthread.cpp  sses_server_calcthread.hpp  sses_server_callback_function.cpp  sses_server_callback_function.hpp  sses_server_callback_param.cpp  (+9 more)
test/: README.md  setup.sh  test.sh
tools/dummymaker/: .gitignore  README.md  pyproject.toml
tools/dummymaker/dummymaker/: __main__.py  config.py  population_stats.py
tools/dummymaker/resources/: config.json  japan_patient_stats.tsv  japan_patient_stats_2014.xls  japan_population_stats.tsv  japan_population_stats.xls
(+31 files in other folders)
